oxiplate/tests/broken/escaping/missing-default-escaper-name.stderr
error: Expected an escaper group name
 --> tests/broken/escaping/missing-default-escaper-name.rs:4:45
  |
4 | #[oxiplate_inline("{% default_escaper_group %}{{ title }}")]
  |                                             ^^^^^^^^^^^^^
